Move api users routes to auth service and keep profiles in user
