# docs/src/swagger-output.json
@@ -7,6 +7,10 @@
   },
   "tags": [
     {
+      "name": "auth",
+      "description": "Everything about auth."
+    },
+    {
       "name": "checkin",
       "description": "Everything about checkin."
     },
@@ -37,6 +41,244 @@
   ],
   "schemes": ["https", "http"],
   "paths": {
+    "/auth/login": {
+      "post": {
+        "tags": ["auth"],
+        "summary": "Create the session cookie for a user.",
+        "description": "",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "idToken",
+            "in": "body",
+            "description": "ID Token.",
+            "required": true,
+            "schema": {
+              "$ref": ""
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Cookie policy successfully set"
+          },
+          "400": {
+            "description": "Recent sign in is required"
+          }
+        }
+      }
+    },
+    "/auth/status": {
+      "get": {
+        "tags": ["auth"],
+        "summary": "User status.",
+        "description": "",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "customToken": {
+                  "type": "string",
+                  "description": "Custom token for a user"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid status"
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "get": {
+        "tags": ["auth"],
+        "summary": "User logout.",
+        "description": "",
+        "produces": ["application/json"],
+        "responses": {
+          "204": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "Invalid status"
+          }
+        }
+      }
+    },
+    "/firebase-users": {
+      "get": {
+        "tags": ["auth"],
+        "summary": "Finds and displays all users.",
+        "description": "",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "pageSize",
+            "in": "query",
+            "type": "string",
+            "description": "",
+            "required": false
+          },
+          {
+            "name": "pageToken",
+            "in": "query",
+            "type": "string",
+            "description": "",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "pageSize": {
+                  "type": "integer"
+                },
+                "pageToken": {
+                  "type": "string"
+                },
+                "users": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/User"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid Status"
+          }
+        }
+      }
+    },
+    "/firebase-users/{userId}": {
+      "get": {
+        "tags": ["auth"],
+        "summary": "Finds a user by user ID.",
+        "description": "",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "type": "integer",
+            "description": "User ID",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Invalid Status"
+          }
+        }
+      },
+      "patch": {
+        "tags": ["auth"],
+        "summary": "Updates existing user by ID.",
+        "description": "",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "type": "integer",
+            "description": "User ID",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Request body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "disabled": {
+                  "type": "boolean",
+                  "description": "To enable/disable a user"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Invalid Status"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["auth"],
+        "summary": "Deletes a user by ID.",
+        "description": "",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "type": "integer",
+            "description": "User ID",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successfully deleted"
+          },
+          "400": {
+            "description": "Invalid Status"
+          }
+        }
+      }
+    },
+    "/firebase-users/email/{email}": {
+      "get": {
+        "tags": ["auth"],
+        "summary": "Finds a user by email",
+        "description": "",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "type": "integer",
+            "description": "User's email",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Invalid Status"
+          }
+        }
+      }
+    },
     "/checkin/": {
       "get": {
         "tags": ["checkin"],
@@ -860,12 +1102,10 @@
                 },
                 "jsonSchema": {
                   "type": "object",
-                  "required": true,
                   "default": {}
                 },
                 "uiSchema": {
                   "type": "object",
-                  "required": true,
                   "default": {}
                 }
               }
@@ -961,12 +1201,10 @@
                 },
                 "jsonSchema": {
                   "type": "object",
-                  "required": true,
                   "default": {}
                 },
                 "uiSchema": {
                   "type": "object",
-                  "required": true,
                   "default": {}
                 }
               }
@@ -989,76 +1227,7 @@
         }
       }
     },
-    "/users/auth/login": {
-      "post": {
-        "tags": ["users"],
-        "summary": "Create the session cookie for a user.",
-        "description": "",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "idToken",
-            "in": "body",
-            "description": "ID Token.",
-            "required": true,
-            "schema": {
-              "$ref": ""
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Cookie policy successfully set"
-          },
-          "400": {
-            "description": "Recent sign in is required"
-          }
-        }
-      }
-    },
-    "/users/auth/status": {
-      "get": {
-        "tags": ["users"],
-        "summary": "User status.",
-        "description": "",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "customToken": {
-                  "type": "string",
-                  "description": "Custom token for a user"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid status"
-          }
-        }
-      }
-    },
-    "/users/auth/logout": {
-      "get": {
-        "tags": ["users"],
-        "summary": "User logout.",
-        "description": "",
-        "produces": ["application/json"],
-        "responses": {
-          "204": {
-            "description": "successful operation"
-          },
-          "400": {
-            "description": "Invalid status"
-          }
-        }
-      }
-    },
-    "/users/companies/": {
+    "/companies": {
       "post": {
         "tags": ["users"],
         "summary": "Create a new company.",
@@ -1115,7 +1284,7 @@
         }
       }
     },
-    "/users/companies/{id}": {
+    "/companies/{id}": {
       "get": {
         "tags": ["users"],
         "summary": "Finds and displays company by id.",
@@ -1175,7 +1344,7 @@
         }
       }
     },
-    "/users/companies/{id}/employees/add": {
+    "/companies/{id}/employees/add": {
       "post": {
         "tags": ["users"],
         "summary": "Adds an employee to the company.",
@@ -1206,7 +1375,7 @@
         }
       }
     },
-    "/users/companies/{id}/employees/": {
+    "/companies/{id}/employees/": {
       "put": {
         "tags": ["users"],
         "summary": "Updates an employee in the company.",
@@ -1237,19 +1406,19 @@
         }
       }
     },
-    "/users/users/{userId}/profile/": {
+    "/users": {
       "get": {
         "tags": ["users"],
-        "summary": "Finds and displays profile by user ID.",
+        "summary": "Gets user profiles by userIds",
         "description": "",
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "userId",
-            "in": "path",
-            "type": "integer",
-            "description": "User ID",
-            "required": true
+            "name": "userIds",
+            "in": "query",
+            "type": "string",
+            "description": "Comma separated userIds to get",
+            "required": false
           }
         ],
         "responses": {
@@ -1272,6 +1441,25 @@
         "summary": "Create a user's profile.",
         "description": "",
         "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Profile"
+            }
+          },
+          "400": {
+            "description": "Invalid Status"
+          }
+        }
+      }
+    },
+    "/users/{userId}": {
+      "get": {
+        "tags": ["users"],
+        "summary": "Finds and displays profile by user ID.",
+        "description": "",
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "userId",
@@ -1285,10 +1473,7 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Profile"
-              }
+              "$ref": "#/definitions/Profile"
             }
           },
           "400": {
@@ -1314,10 +1499,7 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Profile"
-              }
+              "$ref": "#/definitions/Profile"
             }
           },
           "400": {
@@ -1326,157 +1508,10 @@
         }
       }
     },
-    "/users/users/": {
+    "/users/actions/search": {
       "get": {
         "tags": ["users"],
-        "summary": "Finds and displays all users.",
-        "description": "",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "pageSize",
-            "in": "query",
-            "type": "string",
-            "description": "",
-            "required": false
-          },
-          {
-            "name": "pageToken",
-            "in": "query",
-            "type": "string",
-            "description": "",
-            "required": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "pageSize": {
-                  "type": "integer"
-                },
-                "pageToken": {
-                  "type": "string"
-                },
-                "users": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/definitions/Profile"
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid Status"
-          }
-        }
-      }
-    },
-    "/users/users/{userId}": {
-      "get": {
-        "tags": ["users"],
-        "summary": "Finds and displays all users by user ID.",
-        "description": "",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "type": "integer",
-            "description": "User ID",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Profile"
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid Status"
-          }
-        }
-      },
-      "patch": {
-        "tags": ["users"],
-        "summary": "Updates existing user by ID.",
-        "description": "",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "type": "integer",
-            "description": "User ID",
-            "required": true
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "description": "Request body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "disabled": {
-                  "type": "boolean",
-                  "description": "To enable/disable a user"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Profile"
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid Status"
-          }
-        }
-      },
-      "delete": {
-        "tags": ["users"],
-        "summary": "Deletes a user by ID.",
-        "description": "",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "type": "integer",
-            "description": "User ID",
-            "required": true
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "successfully deleted"
-          },
-          "400": {
-            "description": "Invalid Status"
-          }
-        }
-      }
-    },
-    "/users/users/actions/search": {
-      "get": {
-        "tags": ["users"],
-        "summary": "Search for profile.",
+        "summary": "Search for a user profile.",
         "description": "",
         "produces": ["application/json"],
         "parameters": [
@@ -1722,12 +1757,10 @@
         },
         "jsonSchema": {
           "type": "object",
-          "required": true,
           "default": {}
         },
         "uiSchema": {
           "type": "object",
-          "required": true,
           "default": {}
         }
       },
@@ -1801,6 +1834,49 @@
       },
       "xml": {
         "name": "Profile"
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "uid": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "emailVerified": {
+          "type": "boolean"
+        },
+        "displayName": {
+          "type": "string"
+        },
+        "disabled": {
+          "type": "boolean"
+        },
+        "metadata": {
+          "type": "object",
+          "properties": {
+            "lastSignInTime": {
+              "type": "string",
+              "format": "date-time"
+            },
+            "creationTime": {
+              "type": "string",
+              "format": "date-time"
+            }
+          }
+        },
+        "providerData": {
+          "type": "array",
+          "items": {
+            "type": "object"
+          },
+          "default": []
+        }
+      },
+      "xml": {
+        "name": "User"
       }
     }
   }
