# services/auth/src/routes/index.ts
@@ -1,7 +1,9 @@
 import express from "express";
 
 import { authRoutes } from "./auth";
+import { firebaseUsersRoutes } from "./firebase-users";
 
 export const defaultRouter = express.Router();
 
 defaultRouter.use("/auth", authRoutes);
+defaultRouter.use("/firebase-users", firebaseUsersRoutes);
